More views for django

--- a/receiptRecognition/shopperHelper/templates/shopperHelper/create_group.html
+++ b/receiptRecognition/shopperHelper/templates/shopperHelper/create_group.html
@@ -6,7 +6,7 @@
 
 <head>
   {% block head %}
-  <title>CHECKOUT EQUIPMENT</title>
+  <title>CREATE GROUP</title>
   {% endblock %}
   <!--Needed for importing static files
     {% load static %}
@@ -23,7 +23,7 @@
   <div class="container ">
     <div class="jumbotron">
       <h1>Checkout Equipment</h1>
-      <p class="lead">Hello {{ userFirstName }}, need to checkout equipment?</p>
+      <p class="lead">Hello {{ userFirstName }}. Use this page to create a group.</p>
     </div>
     <!-- <div class="alert alert-success" id="success-checkout" role="alert">
         This is a success alert—check it out!
