--- a/receiptRecognition/shopperHelper/templates/shopperHelper/login.html
+++ b/receiptRecognition/shopperHelper/templates/shopperHelper/login.html
@@ -8,22 +8,18 @@
   {% block head %}
   <title>STUDENT LOGIN</title>
   {% endblock %}
-  <!--Needed for importing static files
-    {% load static %}
-     <link rel="stylesheet" href="{% static 'app_Transaction/style.css' %}" type="text/css">
-    -->
 </head>
 {% block body %}
 <div class="container">
 
 
-  <body onload="javascript:document.getElementById('polycardPasswordInput').focus();">
+  <body onload="javascript:document.getElementById('loginUserInput').focus();">
   {%if request.GET.logoutFlag == "True" %}
     <div class="alert alert-success alert-dismissible fade show" role="alert">
       <h4 class="alert-heading">Logout Successful</h4>
-      <p>You have been successfully logged out of the SPL DCS system</p>
+      <p>You have been successfully logged out of the system</p>
       <hr>
-      <p class="mb-0">If you would like to login again, swipe your polycard below.</p>
+      <p class="mb-0">If you would like to login again, enter your phone number below.</p>
       <button type="button" class="close" data-dismiss="alert" aria-label="Close">
     <span aria-hidden="true">&times;</span>
   </button>
@@ -31,9 +27,8 @@
     {% endif %}
 
     <div class="jumbotron">
-      <h1>Welcome to the SPL Digital CheckOut System <strong>(SPL DCS)</strong></h1>
-      <p class="lead">This page is for <strong>STUDENT</strong> login. If you are staff, please click the button below</p> <a href="#" class="btn btn-sm btn-outline-dark">Staff Login</a>
-      </form>
+      <h1>Welcome to the digital receipts system <strong>(DRS)</strong></h1>
+      <p class="lead">This page is for login. If you are staff, please click the button below</p> <a href="#" class="btn btn-sm btn-outline-dark">Staff Login</a>
     </div>
     <!--CheckPolyCard form-->
 
