--- a/receiptRecognition/shopperHelper/templates/shopperHelper/landing.html
+++ b/receiptRecognition/shopperHelper/templates/shopperHelper/landing.html
@@ -33,14 +33,14 @@ https://www.w3schools.com/bootstrap/bootstrap_buttons.asp
           <p>
               Add a receipt and assign it to a group
           </p>
-          <p><a href="{% url 'add_receipt' %}" class="btn btn-outline-primary">Add a Receipt</a></p>
+          <p><a href="{% url 'addReceipt' %}" class="btn btn-outline-primary">Add a Receipt</a></p>
       </div>
           <div class="col-md-4">
               <h2>Create a group</h2>
               <p>
                   Create a group to assign receipts to
               </p>
-              <p><a href="{% url 'create_group' %}" class="btn btn-outline-primary">Create a Group</a></p>
+              <p><a href="{% url 'createGroup' %}" class="btn btn-outline-primary">Create a Group</a></p>
           </div>
   </div>
 
