--- a/receiptRecognition/shopperHelper/templates/shopperHelper/create_group.html
+++ b/receiptRecognition/shopperHelper/templates/shopperHelper/create_group.html
@@ -36,19 +36,14 @@
         <!-- Part: {{ checkOutForm.part }} Quantity: {{ checkOutForm.quantity }} ID: {{ checkOutForm.id_Number }} -->
       </div>
       <div class="form-row">
-        <div class="form-group col-md-3">
           <label for="">&nbsp</label>
           <button id="submitButton" class="btn btn-success btn-block btn-large btn-block" onclick="sendPostData()" type="submit">Checkout</button>
-        </div>
       </div>
     </form>
     <table class="table table-hover">
       <thead>
         <tr>
-          <th scope="col">Part</th>
-          <th scope="col">Quantity</th>
-          <th scope="col">ID Number</th>
-          <th scope="col">Delete</th>
+          <th scope="col">Phone Number</th>
         </tr>
       </thead>
       <tbody class="result" id="result">
