--- a/receiptRecognition/shopperHelper/templates/shopperHelper/create_group.html
+++ b/receiptRecognition/shopperHelper/templates/shopperHelper/create_group.html
@@ -28,10 +28,10 @@
       {% csrf_token %}
       <div class="form-row">
         <div class="form-group col-md-7">
-          <label for="username">Group Name</label> {{ createGroupForm.name }}
+          <label for="username">Group Name</label> {{ createGroupForm.group_name }}
         </div>
         <div class="form-group col-md-5">
-          <label for="username">Add Member</label> {{ createGroupForm.members }}
+          <label for="username">Add Member</label> {{ createGroupForm.group_members }}
         </div>
         <!-- Part: {{ checkOutForm.part }} Quantity: {{ checkOutForm.quantity }} ID: {{ checkOutForm.id_Number }} -->
       </div>
