--- a/receiptRecognition/shopperHelper/templates/shopperHelper/login.html
+++ b/receiptRecognition/shopperHelper/templates/shopperHelper/login.html
@@ -36,7 +36,7 @@
       {% csrf_token %}
       <div class="form-row">
         <div class="form-group col-md-6">
-          <label for="formGroupExampleInput">Type Phone Number</label> {{ loginForm.login_form_data }}
+          <label for="formGroupExampleInput">Type Phone Number</label> {{ form.login_form_data }}
         </div>
       </div>
       <button type="submit" class="btn btn-primary" role="button">Submit</a>
