--- a/receiptRecognition/shopperHelper/templates/base.html
+++ b/receiptRecognition/shopperHelper/templates/base.html
@@ -24,8 +24,8 @@
   <!--Sample navbar code taken from Bootstrap example-->
   {% with url_name=request.resolver_match.url_name %}
   <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <a class="navbar-brand mb-0 h1" href="{% url 'studentLogin' %}">SPL DCS</a>
-    
+    <a class="navbar-brand mb-0 h1" href="{% url 'studentLogin' %}">Splitty</a>
+
     </div>
   </nav>
   {% endwith %} {% block body %}
