--- a/receiptRecognition/shopperHelper/templates/shopperHelper/login.html
+++ b/receiptRecognition/shopperHelper/templates/shopperHelper/login.html
@@ -6,7 +6,7 @@
 
 <head>
   {% block head %}
-  <title>STUDENT LOGIN</title>
+  <title>LOGIN</title>
   {% endblock %}
 </head>
 {% block body %}
@@ -27,8 +27,8 @@
     {% endif %}
 
     <div class="jumbotron">
-      <h1>Welcome to the digital receipts system <strong>(DRS)</strong></h1>
-      <p class="lead">This page is for login. If you are staff, please click the button below</p> <a href="#" class="btn btn-sm btn-outline-dark">Staff Login</a>
+      <h1>Welcome to the Splitty <strong>(DRS)</strong></h1>
+      <p class="lead">Automate your receipt splitting process now!</p>
     </div>
     <!--CheckPolyCard form-->
 
