--- a/receiptRecognition/shopperHelper/templates/shopperHelper/addReceipt.html
+++ b/receiptRecognition/shopperHelper/templates/shopperHelper/addReceipt.html
@@ -30,12 +30,29 @@
       {% csrf_token %}
       <div class="form-row">
         <div class="form-group col-md-7">
-          <label for="username">Image</label> {{ receiptForm.image }}
+          <!-- <label for="username">Image</label> {{ receiptForm.image }} -->
+
+           <div class="custom-file">
+             <!-- <input type="file" class="custom-file-input" id="customFile"> -->
+             {{ receiptForm.image }}
+             <div>
+                <label class="custom-file-label" for="customFile">Choose file</label>
+             </div>
+             <input type="button" class="btn btn-primary" value="Browse..." onclick="document.getElementById('selectedFile').click();" />
+             <!-- <button type="button" class="btn btn-primary">Upload File</button> -->
+
+           </div>
+
         </div>
+
+
+
         <div class="form-group col-md-5">
           <label for="username">Group Assigned</label> {{ receiptForm.group_Assigned }}
         </div>
       </div>
+      <input type="submit" class="btn btn-success" value="Submit" />
+    </form>
 
     <br>
   </div>
