--- a/receiptRecognition/shopperHelper/templates/shopperHelper/create_group.html
+++ b/receiptRecognition/shopperHelper/templates/shopperHelper/create_group.html
@@ -18,7 +18,7 @@
 
   <div class="container ">
     <div class="jumbotron">
-      <h1>Checkout Equipment</h1>
+      <h1>Create Group</h1>
       <p class="lead">Hello {{ userFirstName }}. Use this page to create a group.</p>
     </div>
     <!-- <div class="alert alert-success" id="success-checkout" role="alert">
