--- a/receiptRecognition/shopperHelper/templates/shopperHelper/create_group.html
+++ b/receiptRecognition/shopperHelper/templates/shopperHelper/create_group.html
@@ -39,11 +39,11 @@
 
         <div class="form-group col-md-6">
           <label for="">&nbsp</label>
-          <button id="addItemButton" class="btn btn-outline-primary btn-large btn-block" onclick="addPartToOrder()" type="submit">Add item</button>
+          <button id="addItemButton" class="btn btn-outline-primary btn-large btn-block" onclick="addPartToOrder()" type="submit">Add member</button>
         </div>
         <div class="form-group col-md-6">
           <label for="">&nbsp</label>
-          <button id="submitButton" class="btn btn-success btn-large btn-block" onclick="sendPostData()" type="submit">Checkout</button>
+          <button id="submitButton" class="btn btn-success btn-large btn-block" onclick="sendPostData()" type="submit">Create Group</button>
         </div>
       </div>
 
