--- a/receiptRecognition/shopperHelper/templates/shopperHelper/selectItems.html
+++ b/receiptRecognition/shopperHelper/templates/shopperHelper/selectItems.html
@@ -30,26 +30,21 @@
             <th scope="col">Item Name</th>
             <th scope="col">Item Price</th>
           </tr>
-
         </thead>
-
         <form>
           {% csrf_token %}
         <tbody class="result" id="result">
-          {% for number,name,price in items_on_receipt %}
-          <tr>
-          <th scope="row">{{ number }}</th>
-          <td scope="row">{{ name }}</td>
-          <td scope="row">{{ price }}</td>
-          <td scope="row"><input type="number" class="form-control mb-1 mr-sm-1" id="quantity_to_remove_{{ part }}" max="{{ quantity }}" min=0 value="0" placeholder="MAX: {{ quantity }}" onchange="var _part = '{{ part }}';var _quantity = this.value; var _id = '{{ ID }}';addPartToOrder(_part, _quantity,_id)"></td>
-        </tr>
+          {% for number,name,price in item_list %}
+              <tr>
+              <td scope="row"><label><input type="checkbox" value=""></label></th>
+              <th scope="row">{{ number }}</th>
+              <td scope="row">{{ name }}</td>
+              <td scope="row">{{ price }}</td>
+              </tr>
           {% endfor %}
         </tbody>
       </form>
       </table>
-      <div class="checkbox">
-          <label><input type="checkbox" value="">Option 1</label>
-      </div>
     </div>
     <script type="text/javascript">
     "use strict";
