--- a/receiptRecognition/shopperHelper/templates/shopperHelper/login.html
+++ b/receiptRecognition/shopperHelper/templates/shopperHelper/login.html
@@ -26,6 +26,18 @@
     </div>
     {% endif %}
 
+{%if request.GET.registerFlag == "True" %}
+  <div class="alert alert-success alert-dismissible fade show" role="alert">
+    <h4 class="alert-heading">Registation Successful</h4>
+    <p>You have been successfully registered as a new user</p>
+    <hr>
+    <p class="mb-0">If you would like to login again, enter your phone number below.</p>
+    <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+  <span aria-hidden="true">&times;</span>
+</button>
+  </div>
+  {% endif %}
+
     <div class="jumbotron">
       <h1>Welcome to the Splitty <strong>(DRS)</strong></h1>
       <p class="lead">Automate your receipt splitting process now!</p>
