--- a/receiptRecognition/shopperHelper/templates/shopperHelper/selectItems.html
+++ b/receiptRecognition/shopperHelper/templates/shopperHelper/selectItems.html
@@ -15,6 +15,16 @@
     {% block body %}
     <body onload="pageLoadScripts()">
         <div class="container">
+
+            {%if request.GET.imageUploadSuccessFlag == "True" %}
+              <div class="alert alert-success alert-dismissible fade show" role="alert">
+                <h4 class="alert-heading">Image Upload Successful</h4>
+                <p>You're image has been successfully uploaded</p>
+                <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+              <span aria-hidden="true">&times;</span>
+            </button>
+              </div>
+              {% endif %}
           <div class="jumbotron">
             <h1>Select Items to Split</h1>
             <p class="lead">Hello, {{ userFirstName }}, please select the items you want to split.</p>
