Make Group creation work without JS

--- a/receiptRecognition/shopperHelper/templates/shopperHelper/create_group.html
+++ b/receiptRecognition/shopperHelper/templates/shopperHelper/create_group.html
@@ -10,10 +10,10 @@
   {% endblock %}
 </head>
 
-
+<body>
 {% block body %}
 
-<body onload="pageLoadScripts()">
+<!-- <body onload="pageLoadScripts()"> -->
 
 
   <div class="container ">
@@ -24,10 +24,15 @@
     <!-- <div class="alert alert-success" id="success-checkout" role="alert">
         This is a success alert—check it out!
       </div> -->
-    <form class="partSelect">
+    <form method="post">
       {% csrf_token %}
-      <div class="form-row">
-        <div class="form-group col-md-7">
+      {{ groupForm.as_p }}
+      <button type="submit" class="btn btn-success btn-large btn-block" role = "button">Create Group</button>
+    </form>
+</div>
+      <!-- <div class="form-row"> -->
+
+        <!-- <div class="form-group col-md-7">
           <label for="username">Group Name</label> {{ groupForm.group_name }}
         </div>
         <div class="form-group col-md-5">
@@ -40,17 +45,18 @@
         <div class="form-group col-md-6">
           <label for="">&nbsp</label>
           <button id="addItemButton" class="btn btn-outline-primary btn-large btn-block" onclick="addPartToOrder()" type="submit">Add Member to Group</button>
-        </div>
-        <div class="form-group col-md-6">
-          <label for="">&nbsp</label>
-          <button id="submitButton" class="btn btn-success btn-large btn-block" onclick="sendPostData()" type="submit">Create Group</button>
-        </div>
-      </div>
+        </div> -->
+        <!-- <div class="form-group col-md-6"> -->
+          <!-- <label for="">&nbsp</label> -->
+            <!-- <button id="submitButton" class="btn btn-success btn-large btn-block" onclick="sendPostData()" type="submit">Create Group</button> -->
 
+        <!-- </div> -->
+      <!-- </div> -->
+     <!-- </form> -->
       <!-- <div class="form-row">
           <label for="">&nbsp</label>
-          <button id="addItemButton submitButton" class="btn btn-success btn-block btn-large btn-block" onclick="addPartToOrder()" type="submit">Add</button>
-      </div> -->
+           <button id="addItemButton submitButton" class="btn btn-success btn-block btn-large btn-block" onclick="addPartToOrder()" type="submit">Add</button> -->
+      <!-- </div>
     </form>
     <table class="table table-hover">
       <thead>
@@ -65,9 +71,9 @@
     <br>
 
     <br>
-  </div>
+  </div> -->
 
-  <script type="text/javascript">
+  <!-- <script type="text/javascript">
     "use strict";
     // var outerObj = {};
     var outerObj = [];
@@ -136,12 +142,9 @@
     var sendPostDataEvent = document.getElementById("submitButton").addEventListener("click", sendPostData);
     var deleteEntryButton = document.getElementById("deleteEntryButton").addEventListener("click", deleteEntry);
     document.addEventListener("submit", sendPostData);
-  </script>
+  </script> -->
+
   {% endblock %}
 </body>
-
-
-
-
 
 </html>
