--- a/receiptRecognition/shopperHelper/templates/shopperHelper/landing.html
+++ b/receiptRecognition/shopperHelper/templates/shopperHelper/landing.html
@@ -22,6 +22,17 @@ https://www.w3schools.com/bootstrap/bootstrap_buttons.asp
 <body>
   {% block body %}
   <div class="container">
+
+      {%if request.GET.createGroupSuccessFlag == "True" %}
+        <div class="alert alert-success alert-dismissible fade show" role="alert">
+          <h4 class="alert-heading">Create Group Successful</h4>
+          <p>You're group has been successfully created</p>
+          <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+        <span aria-hidden="true">&times;</span>
+      </button>
+        </div>
+        {% endif %}
+        
     <div class="jumbotron">
       <h1>Welcome {{ userFirstName }}</h1>
       <p class="lead">What would you like to do?</p>
